Bug 302748 - Underline not rendered in commented text
Summary: Underline not rendered in commented text
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-29 14:35 UTC by mogliii
Modified: 2012-07-05 14:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments
Showing missing underlines in comment lines (1.63 KB, image/png)
2012-06-29 14:36 UTC, mogliii
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mogliii 2012-06-29 14:35:28 UTC
First found with Kile on Windows. The Kate version is 3.8.0. Windows 7.

Underlines are not rendered in commented line. Tested for latex (%) and python (#) sourcecode. Screenshot attached. 
I could not reproduce it under Kubuntu in a VM.

Reproducible: Always

Steps to Reproduce:
1. Write text with underlin
2. Comment text
Actual Results:  
Underlines are not rendered

Expected Results:  
Underlines should be rendered as in Linux
Comment 1 mogliii 2012-06-29 14:36:09 UTC
Created attachment 72216 [details]
Showing missing underlines in comment lines
Comment 2 Dominik Haumann 2012-06-30 14:56:59 UTC
Does it work with other fonts? Please test.
Comment 3 mogliii 2012-06-30 15:27:23 UTC
You are right, it seems to be font specific
I tested some fonts.

1) Fonts not showing underline: Courier New, Default font (not sure which one this is)

2) Fonts working: Agency FB, Dejavu sans mono, linux libertine, arial, batang, calibri, tahoma, times new roman, verdana

Did not go though all fonts though
Comment 4 mogliii 2012-07-03 08:49:31 UTC
So do we forward this bug to another project that manages the font rendering? Or is it still a kate bug? And can anyone comment which font is the default for kate on windows?
Comment 5 Dominik Haumann 2012-07-03 12:33:31 UTC
Git commit eea6116bc02c67d3604e6ca246689ebba82bed76 by Dominik Haumann.
Committed on 03/07/2012 at 13:58.
Pushed by dhaumann into branch 'KDE/4.9'.

make font "Courier New" work

FIXED-IN: 4.9
CCMAIL: ps_ml@gmx.de

M  +13   -1    part/render/katerenderer.cpp
M  +1    -0    part/render/katerenderer.h

http://commits.kde.org/kate/eea6116bc02c67d3604e6ca246689ebba82bed76
Comment 6 Dominik Haumann 2012-07-05 14:02:35 UTC
Git commit 4fcf2055c3a12194440607274d43f15e15f1f392 by Dominik Haumann.
Committed on 03/07/2012 at 13:58.
Pushed by dhaumann into branch 'KDE/4.8'.

make font "Courier New" work

FIXED-IN: 4.9
CCMAIL: ps_ml@gmx.de

M  +13   -1    part/render/katerenderer.cpp
M  +1    -0    part/render/katerenderer.h

http://commits.kde.org/kate/4fcf2055c3a12194440607274d43f15e15f1f392