make font "Courier New" work

FIXED-IN: 4.9
CCMAIL: ps_ml@gmx.de
BUG: 302748